# mini-rag

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-blog.yml
blog/: zola.toml
blog/content/: 01-why-rust-for-rag.md  02-extracting-text.md  03-chunking-text.md  04-embeddings-and-storage.md  05-vector-search.md  06-sync-and-chat.md
blog/themes/crab-island/: theme.toml
blog/themes/crab-island/sass/: _animations.scss  _base.scss  _header.scss  _island.scss  _main.scss  _mobile.scss  _normalize.scss  _syntax.scss  _toc.scss  _variables.scss  site.scss
blog/themes/crab-island/static/: crab-island.js
blog/themes/crab-island/templates/: base.html  index.html  macros.html  page.html
blog/themes/crab-island/templates/tags/: list.html  single.html
src/: chunk.rs  db.rs  embed.rs  extract.rs  lib.rs  rag.rs
