[package]
name = "mini-rag"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[lib]
name = "mini_rag"
path = "src/lib.rs"

[[bin]]
name = "rag-sync"
path = "src/bin/sync.rs"

[[bin]]
name = "rag-chat"
path = "src/bin/chat.rs"

[dependencies]
anyhow = "1"
kreuzberg = { version = "4.4.4", features = ["pdf"] }
libsql = "0.9.29"
owo-colors = "4"
rig-core = "0.32.0"
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
dbg_macro = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"
too_many_lines = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
